<resources>
    <string name="app_name">AngkotKu</string>
    <string name="title_home">Home</string>
    <string name="title_angkot">Angkot</string>
    <string name="title_notifications">Profile</string>
    <string name="nama_logo">AngkotKu</string>
    <string name="slogan_login">Kemana aja pasti bisa!</string>
    <string name="sign_up_login">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="save">Masuk</string>
    <string name="slogan_register">Masukkan email aktif yang akan kamu gunakan untuk registrasi</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="detail_position"><![CDATA[Lebih Detail ->]]></string>
    <string name="fullname">Rachman Faiz Maulana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">/orng</string>
    <string-array name="trayeks">
        <item>1:Abdul Muis - Cicaheum via Binong</item>
        <item>2:Abdul Muis - Cicaheum via Aceh</item>
        <item>3:Abdul Muis - Dago</item>
        <item>4:Abdul Muis - Ledeng</item>
        <item>5:Abdul Muis - Elang</item>
        <item>6:Cicaheum - Ledeng</item>
        <item>7:Cicaheum - Ciroyom</item>
        <item>8:Cicaheum - Ciwastra - Derwati</item>
        <item>9:Cicaheum - Cibaduyut</item>
        <item>10:Stasiun Hall - Dago</item>
        <item>11:Stasiun Hall - Sadang Serang</item>
        <item>12:Ciumbuleuit - Stasiun Hall</item>
        <item>13:Stasiun Hall - Gedebage</item>
        <item>14:Stasiun Hall - Sarijadi</item>
        <item>15:Stasiun Hall - Gunung Batu</item>
        <item>16:Margahayu Raya - Ledeng</item>
        <item>17:Dago - Riung Bandung</item>
        <item>18:Caringin - Dago</item>
        <item>19:Panghegar Permai - Dipatiukur</item>
        <item>20:Ciroyom - Sarijadi</item>
        <item>21:Ciroyom - Bumi Asri</item>
        <item>22:Cikudapateuh - Ciroyom</item>
        <item>23:Kalapa - Buah Batu</item>
        <item>24:Sederhana - Cijerah</item>
        <item>25:Sederhana - Cimindi</item>
        <item>26:Ciwastra - Ujungberung</item>
        <item>27:Cisitu - Tegallega</item>
        <item>28:Cijerah - Ciwastra - Derwati</item>
        <item>29:Elang - Ujungberung</item>
        <item>30:Abdul Muis - Mengger</item>
        <item>31:Cicadas - Elang</item>
        <item>32:Antapani - Ciroyom</item>
        <item>33:Cicadas - Cibiru - Panyileukan</item>
        <item>34:Bumi Penyileukan - Sekemirung</item>
        <item>35:Caringin - Sadang Serang</item>
        <item>36:Cibaduyut - Kalapa</item>
        <item>37:Cicaheum - Cileunyi</item>
        <item>38:Kalapa - Sederhana</item>
    </string-array>
</resources>